Sun Nov 16 21:28:00 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Compiler.java: make compiler mode
	  enum.

	* net/loveruby/cflat/compiler/Options.java: ditto.

	* net/loveruby/cflat/compiler/SourceFile.java: ditto.

	* net/loveruby/cflat/compiler/CompilerMode.java: new enum.

Sun Nov 16 20:20:08 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/DereferenceChecker.java: We do not
	  need to check an OpAssignNode as operator, because this class only
	  check references.

Sun Nov 16 20:10:59 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/CodeGenerator.java (compileAST):
	  should not generate .data section when no global variable is
	  defined.

Sun Nov 16 20:01:06 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/CodeGenerator.java: should access
	  file-local gvar directly (with @GOTOFF) in PIE.

	* net/loveruby/cflat/ast/Entity.java: all entities should have
	  memref or address.

	* net/loveruby/cflat/ast/Variable.java: ditto.

	* net/loveruby/cflat/ast/DefinedVariable.java: ditto.

	* net/loveruby/cflat/ast/UndefinedVariable.java: ditto.

	* net/loveruby/cflat/ast/Function.java: ditto.

	* net/loveruby/cflat/ast/DefinedFunction.java: ditto.

	* import/stdlib.hb: add new declarations.

	* import/unistd.hb: add new declarations.

Sun Nov  2 18:27:01 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Options.java: new option
	  --readonly-plt.

Sun Oct 26 07:04:53 2008  Minero Aoki  <aamine@loveruby.net>

	* bin/cbc: resolve symbolic link to command file.

Sat Oct 25 03:40:16 2008  Minero Aoki  <aamine@loveruby.net>

	* name code symbols lazily.

	* separate Label and Symbol.

	* net/loveruby/cflat/compiler/CodeGenerator.java: use Symbol
	  instead of Label for entity symbol.

	* net/loveruby/cflat/asm/Symbol.java: new interface.

	* net/loveruby/cflat/asm/BaseSymbol.java: new class.

	* net/loveruby/cflat/asm/NamedSymbol.java: new class.
