@@ -1,3 +1,8 @@
+Sun Nov 16 22:29:33 2008  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/compiler/TypeResolver.java: "f = puts"
+	  implies "f = &puts", adjust type for such expressions.
+
 Sun Nov 16 21:28:00 2008  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/compiler/Compiler.java: make compiler mode
